--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,35 @@
     android:layout_height="match_parent"
     tools:context="de.thro.inf.prg3.a07.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+	<Button
+		android:id="@+id/refresh_button"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Refresh"
+		android:layout_marginLeft="20dp"
+		android:layout_marginTop="20dp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		/>
 
+	<CheckBox
+		android:id="@+id/vegetarian_checkbox"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="30dp"
+		android:text="Vegetarian only"
+		app:layout_constraintLeft_toRightOf="@id/refresh_button"
+		app:layout_constraintBaseline_toBaselineOf="@id/refresh_button"
+		/>
+
+	<ListView
+		android:id="@+id/menu_listview"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginTop="80dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/refresh_button"
+		/>
 </android.support.constraint.ConstraintLayout>
